mobile top bar spacing fix

--- a/shared.css
+++ b/shared.css
@@ -38,7 +38,7 @@ div.linksList{
     text-align: center;
 
     min-width: 20px;
-    max-width: 100px;
+    max-width: 80px;
     height: 67px;
     padding: 3px;
 
@@ -174,7 +174,7 @@ p.pageName{
 
 ul.pageList{
     display: grid;
-    grid-template-columns: 100px 100px 100px 100px;
+    grid-template-columns: 80px 80px 80px 80px;
     
     grid-column-gap: 1em;
     grid-row-gap: 1em;
